force-app/main/default/objects/NCMT_LEED_Parameter__c/NCMT_LEED_Parameter__c.object-meta.xml
<CustomObject>
    <description>Holds LEED parameter for the Max, Federal Madate, P100, and Customary data.  Updated yearly.</description>
    <label>LEED Parameter</label>
    <nameField>
        <displayFormat>LEED-Param-{0000}</displayFormat>
        <label>NCMT LEED Parameter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LEED Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>