force-app/main/default/objects/NCMT_LEED_Parameter__c/fields/Class_A_Percent__c.field-meta.xml
<CustomField>
    <fullName>Class_A_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Class A Percent</description>
    <inlineHelpText>Class A Percent</inlineHelpText>
    <label>Class A Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>