force-app/main/default/objects/NCMT_LEED_Parameter__c/fields/Code_Minimum_Percent__c.field-meta.xml
<CustomField>
    <fullName>Code_Minimum_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Code Min Percent</description>
    <inlineHelpText>Code Min Percent</inlineHelpText>
    <label>Code Minimum Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>