force-app/main/default/objects/NCMT_LEED_Parameter__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
    <inlineHelpText>Fiscal Year</inlineHelpText>
    <label>Fiscal Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>