force-app/main/default/objects/NCMT_LEED_Parameter__c/fields/LEED_Category__c.field-meta.xml
<CustomField>
    <fullName>LEED_Category__c</fullName>
    <description>LEED Category</description>
    <inlineHelpText>LEED Category</inlineHelpText>
    <label>LEED Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>