force-app/main/default/objects/NCMT_LEED_Parameter__c/fields/LEED_Grouping__c.field-meta.xml
<CustomField>
    <fullName>LEED_Grouping__c</fullName>
    <description>LEED Grouping</description>
    <inlineHelpText>LEED Grouping</inlineHelpText>
    <label>LEED Grouping</label>
    <length>200</length>
    <type>Text</type>
</CustomField>