force-app/main/default/objects/NCMT_LEED_Parameter__c/fields/LEED_Max_Points__c.field-meta.xml
<CustomField>
    <fullName>LEED_Max_Points__c</fullName>
    <description>LEED Item Max Points</description>
    <inlineHelpText>LEED Item Max Points</inlineHelpText>
    <label>Max Points</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>