force-app/main/default/objects/NCMT_LEED_Parameter__c/fields/P100_Percent__c.field-meta.xml
<CustomField>
    <fullName>P100_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>P100 Percent</description>
    <inlineHelpText>P100 Percent</inlineHelpText>
    <label>P100 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>