force-app/main/default/objects/NCMT_LEED_Parameter__c/fields/Parameter_Type__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Type__c</fullName>
    <defaultValue>&quot;Credit&quot;</defaultValue>
    <description>Parameter Type</description>
    <inlineHelpText>Parameter Type</inlineHelpText>
    <label>Parameter Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>