force-app/main/default/objects/NCMT_LEED_Parameter__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Points</description>
    <inlineHelpText>Total Points</inlineHelpText>
    <label>Total Points</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>