force-app/main/default/objects/NCMT_LEED_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost_Category__c</columns>
    <columns>LEED_Grouping__c</columns>
    <columns>LEED_Category__c</columns>
    <columns>Parameter_Type__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>LEED_Max_Points__c</columns>
    <columns>Code_Minimum_Percent__c</columns>
    <columns>Class_A_Percent__c</columns>
    <columns>P100_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>